added edit member component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,7 @@
-{}
+{
+  "karmaTestExplorer.enableExtension": true,
+  "karmaTestExplorer.projectWorkspaces": ["."],
+  "karmaTestExplorer.testFiles": [
+    "**/*.spec.ts",
+  ]
+}
